--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "nycjing",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "morgan": "^1.8.2",
